# simple-cpu-benchmark

./: Cargo.toml  LICENSE  README.md
src/: main.rs
